--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -63,6 +63,7 @@ limitations under the License. -->
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
+            android:visibility="gone"
             />
 
         <Spinner
@@ -73,6 +74,7 @@ limitations under the License. -->
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
+            android:visibility="gone"
             />
 
         <Spinner
@@ -83,7 +85,8 @@ limitations under the License. -->
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
-            />
+            android:visibility="gone"
+             />
 
     </LinearLayout>
     <Button
