--- a/app/src/main/res/layout/fragment_stockdata.xml
+++ b/app/src/main/res/layout/fragment_stockdata.xml
@@ -64,6 +64,7 @@
             android:layout_width="wrap_content"
             style="@style/stock_item_text"
             android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintEnd_toStartOf="@id/textViewMarketCurrency"
             app:layout_constraintStart_toEndOf="@+id/guidelineVert"
