--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -51,18 +51,28 @@
           app:layout_constraintTop_toBottomOf="@+id/recyclerview"
           android:layout_marginTop="8dp"
           android:layout_marginBottom="12dp"
-          app:layout_constraintBottom_toTopOf="@id/addSelectionButton"
           />
 
-      <ImageButton
+      <LinearLayout
+          android:id="@+id/buttonlayout"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_margin="16dp"
+          app:layout_constraintTop_toBottomOf="@id/overviewDividerSelection"
+          app:layout_constraintBottom_toTopOf="@id/recyclerviewSelection"
+          app:layout_constraintEnd_toEndOf="parent"
+          android:orientation="horizontal"
+          >
+        <org.apmem.tools.layouts.FlowLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="end"
+            >
+        <ImageButton
           android:id="@+id/addSelectionButton"
           android:contentDescription="@string/add_selection"
           android:src="@drawable/ic_action_add_circle_outline"
           style="@style/asset_item_imagebutton"
-          android:layout_marginEnd="32dp"
-          app:layout_constraintTop_toBottomOf="@id/overviewDividerSelection"
-          app:layout_constraintBottom_toTopOf="@id/recyclerviewSelection"
-          app:layout_constraintEnd_toStartOf="@id/removeSelectionButton"
           />
 
       <ImageButton
@@ -70,17 +80,16 @@
           android:contentDescription="@string/remove_selection"
           android:src="@drawable/ic_action_remove_circle_outline"
           style="@style/asset_item_imagebutton"
-          android:layout_marginEnd="32dp"
-          app:layout_constraintTop_toTopOf="@id/addSelectionButton"
-          app:layout_constraintBottom_toBottomOf="@id/addSelectionButton"
-          app:layout_constraintEnd_toEndOf="parent"
           />
+
+      </org.apmem.tools.layouts.FlowLayout>
+      </LinearLayout>
 
       <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/recyclerviewSelection"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          app:layout_constraintTop_toBottomOf="@id/addSelectionButton"
+          app:layout_constraintTop_toBottomOf="@id/buttonlayout"
           app:layout_constraintBottom_toBottomOf="parent"
           android:padding="@dimen/small_padding"
           android:layout_marginTop="8dp"
