add sort by market cap

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -45,6 +45,10 @@
             android:checkable="true"
             android:title="@string/sort_profit_percentage" />
         <item
+            android:id="@+id/menu_sort_marketcap"
+            android:checkable="true"
+            android:title="@string/sort_marketcap" />
+        <item
             android:id="@+id/menu_sort_dividend_percentage"
             android:checkable="true"
             android:title="@string/sort_dividend_percentage" />
